[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmoblender"
version = "1.0.0"
description = "CosmoBLENDER: Cosmological Biases to LENsing and Delensing due to Extragalactic Radiation"
readme = "README_PyPI.md"
authors = [{ name = "Anton Baleato Lizancos", email = "a.baleatolizancos@berkeley.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "healpy",
    "hmvec",
    "quicklens",
    "pyccl"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/abaleato/CosmoBLENDER"